theme.css
/* ... */
.is-phone.theme-setting-headingScaleFactorPhone1point414 {
  --theme-value-headingScaleFactorPhone: 1.414;
}
.is-phone.theme-setting-headingScaleFactorPhone1point5 {
  --theme-value-headingScaleFactorPhone: 1.5;
}
.is-phone.theme-setting-headingScaleFactorPhone1point618 {
  --theme-value-headingScaleFactorPhone: 1.618;
}
/* Smaller font size for markdown documents in sidebar */
.mod-sidedock {
  --h1-size: calc(var(--theme-value-headingScaleFactor) * var(--h2-size));
  --h2-size: calc(var(--theme-value-headingScaleFactor) * var(--h3-size));
  --h3-size: calc(var(--theme-value-headingScaleFactor) * var(--h4-size));
  --h4-size: calc(var(--theme-value-headingScaleFactor) * var(--h5-size));
  --h5-size: calc(var(--theme-value-headingScaleFactor) * var(--h6-size));
  --h6-size: calc(
    var(--theme-value-sidebarFontScalingFactor) * var(--font-text-size)
  );
}

.markdown-rendered
  div:has(> :is(p, pre, table, ul, ol))
  + div
  > :is(h1, h2, h3, h4, h5, h6) {
  margin-top: 0;
}

.markdown-source-view .cm-line.HyperMD-header,
.markdown-source-view.is-live-preview .cm-line.HyperMD-header,
.markdown-source-view.is-live-preview .HyperMD-list-line .cm-header,
.markdown-rendered h1,
.markdown-rendered h2,
.markdown-rendered h3,
.markdown-rendered h4,
.markdown-rendered h5,
.markdown-rendered h6 {
  font-family: var(--theme-setting-headingFont), var(--font-text-theme);
}

/* Space before headings... */
.markdown-source-view .cm-line.HyperMD-header,
.markdown-source-view.is-live-preview .cm-line.HyperMD-header,
.markdown-rendered h1,
.markdown-rendered h2,
.markdown-rendered h3,
.markdown-rendered h4,
.markdown-rendered h5,
.markdown-rendered h6 {
  padding: var(--heading-spacing) 0 0 0;
  margin: 0;
}
/* ...except when they immediately follow another heading */
.markdown-source-view
  :is(
    .cm-line.HyperMD-header-1,
    .cm-line.HyperMD-header-2,
    .cm-line.HyperMD-header-3,
    .cm-line.HyperMD-header-4,
    .cm-line.HyperMD-header-5,
    .cm-line.HyperMD-header-6
  )
  + :is(
    .cm-line.HyperMD-header-1,
    .cm-line.HyperMD-header-2,
    .cm-line.HyperMD-header-3,
    .cm-line.HyperMD-header-4,
    .cm-line.HyperMD-header-5,
    .cm-line.HyperMD-header-6
  ) {
  /* Using padding as margin has an !important applied elsewhere */
  padding-top: 0;
}
.markdown-rendered
  :is(
    .markdown-preview-section > div:has(h1),
    .markdown-preview-section > div:has(h2),
    .markdown-preview-section > div:has(h3),
    .markdown-preview-section > div:has(h4),
    .markdown-preview-section > div:has(h5),
    .markdown-preview-section > div:has(h6)
  )
  + :is(
    .markdown-preview-section > div:has(h1),
    .markdown-preview-section > div:has(h2),
    .markdown-preview-section > div:has(h3),
    .markdown-preview-section > div:has(h4),
    .markdown-preview-section > div:has(h5),
    .markdown-preview-section > div:has(h6)
  )
  :is(h1, h2, h3, h4, h5, h6) {
  padding-top: 0;
}
/* ...or they're first on the page */
.markdown-source-view .cm-line.HyperMD-header:first-child,
.markdown-rendered .mod-header + div > h1 {
  padding-top: 0;
}

/* Markdown formatting shown while editing e.g. ### for headings */
.cm-formatting.cm-formatting-header {
  color: var(--theme-color-textMeta);
  font-size: var(--font-ui-smaller) !important;
  font-weight: normal;
  vertical-align: middle;
}

.markdown-source-view .HyperMD-quote,
.callout {
  font-weight: 300;
}

.markdown-source-view.mod-cm6 .cm-line.HyperMD-codeblock {
  /* Matched to --callout-padding */
  padding: 0 1.5em;
}

.markdown-source-view.mod-cm6 hr,
.markdown-rendered hr {
  display: flex;
  align-items: center;
  border: none;
  border-top: var(--hr-thickness) solid;
  border-color: var(--hr-color);
  margin: 2em 0 !important;
}
.cm-s-obsidian .cm-inline-code:not(.cm-formatting),
.markdown-rendered code {
  padding: 0.25em 0.5em;
}

/* #region     Lists */
li.is-collapsed .list-bullet:after,
.is-collapsed ~ .cm-formatting-list .list-bullet:after {
  box-shadow: none;
}
@media (hover: hover) {
  li.is-collapsed .list-collapse-indicator:hover ~ .list-bullet:after,
  li.is-collapsed .cm-fold-indicator:hover ~ .list-bullet:after,
  .list-collapse-indicator:hover.is-collapsed ~ .list-bullet:after,
  .cm-fold-indicator:hover.is-collapsed ~ .list-bullet:after,
  li.is-collapsed
    .list-collapse-indicator:hover
    ~ .cm-formatting-list
    .list-bullet:after,
  li.is-collapsed
    .cm-fold-indicator:hover
    ~ .cm-formatting-list
    .list-bullet:after,
  .list-collapse-indicator:hover.is-collapsed
    ~ .cm-formatting-list
    .list-bullet:after,
  .cm-fold-indicator:hover.is-collapsed
    ~ .cm-formatting-list
    .list-bullet:after {
    background-color: var(--list-marker-color-collapsed);
    box-shadow: none;
  }

  .list-collapse-indicator:hover ~ .list-bullet:after,
  .cm-fold-indicator:hover ~ .list-bullet:after,
  .list-collapse-indicator:hover ~ .cm-formatting-list .list-bullet:after,
  .cm-fold-indicator:hover ~ .cm-formatting-list .list-bullet:after {
    box-shadow: none;
  }
}
/* #endregion */
/* #region     Collapse indicators */
/* Appearance consistent with navigation controls */
.collapse-indicator,
.list-collapse-indicator {
  background-color: var(--background-primary);
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-content: center;
  width: var(--theme-length-collapseIndicatorSize);
  height: var(--theme-length-collapseIndicatorSize);
  border: none;
  color: var(--theme-color-control);
  flex-wrap: wrap;
}
@media (hover: hover) {
  .collapse-indicator:hover,
  .cm-fold-indicator:hover .collapse-indicator,
  .list-collapse-indicator:hover {
    color: var(--theme-color-control);
    background-color: var(--theme-color-navigationButtonBgHover);
  }
}
.markdown-source-view.mod-cm6 .cm-fold-indicator .collapse-indicator {
  height: var(--theme-length-collapseIndicatorSize);
  top: 50%;
  margin-top: calc(-0.5 * var(--theme-length-collapseIndicatorSize));
  padding: 0;
}
/* ... */

